--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "target": "ES6",
-        "lib": ["ES6", "es2017"],
+        "lib": ["es2020"],
+        "target": "es2020",
         "module": "commonjs",
         "esModuleInterop": true,
         "experimentalDecorators": true,
